--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -26,7 +26,11 @@ jobs:
         run: uv sync --frozen
 
       - name: Run progress builder
-        run: uv run python src/luapula_progress.py
+        env:
+          KOBO_BASE_URL: ${{ secrets.KOBO_BASE_URL }}
+          KOBO_TOKEN: ${{ secrets.KOBO_TOKEN }}
+          KOBO_ASSET_UID: ${{ secrets.KOBO_ASSET_UID }}
+        run: uv run python src/build_progress.py
 
       - name: Commit & push if changed
         run: |
