--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -29,7 +29,7 @@ jobs:
         env:
           KOBO_BASE_URL: ${{ secrets.KOBO_BASE_URL }}
           KOBO_TOKEN: ${{ secrets.KOBO_TOKEN }}
-          KOBO_ASSET_UID: ${{ secrets.KOBO_ASSET_UID }}
+          LUAPULA_ASSET_UID: ${{ secrets.KOBO_ASSET_UID }}
         run: uv run python src/luapula_progress.py
 
       - name: Commit & push if changed
