--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add docs/index.html docs/progress.csv || true
+          git add docs
           if git diff --cached --quiet; then
             echo "No changes."
           else
